Se agrega redux, se modifica la configuración de swagger y se integra endpoint de autenticacion
